# flux-app

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  DEPLOY.md  README.md
.github/: pull_request_template.md
.github/workflows/: ci.yaml
backend/: .env.example  README.md  alembic.ini  main.py  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 99b9af15dd9f_initial_schema.py  c3b95ff3bdbf_master_v2_schema.py  d4e8a1b2c3d4_complete_workout_schema.py  e5f9b2c3d4e5_timestamptz_workout_pattern.py  f6a0b3c4d5e6_schema_3_0.py
backend/config/: conditioning.yaml  conditioning_config.yaml  library.yaml  logic.yaml  program_config.yaml  selections.yaml  sessions.yaml  state_thresholds.yaml
backend/core/: models.py  resolver.py
backend/scripts/: seed_db.py
backend/services/: system_init.py
backend/src/: __init__.py  config.py  engine.py  main.py  models.py
backend/src/api/: __init__.py  deps.py  main.py  schemas.py
backend/src/api/routes/: conditioning.py  exercises.py  readiness.py  workouts.py
backend/src/db/: __init__.py  models.py  seeds.py  session.py
backend/src/services/: __init__.py  conditioning.py  workout.py
backend/tests/: __init__.py  test_engine.py  test_models.py  test_resolver.py
docs/: agile_logic.md  backend_api_spec.md  frontend_context.md  logic_summary.md
frontend/: .env.example  .gitignore  .prettierrc  README.md  app.json  eas.json  eslint.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: _layout.tsx  check-in.tsx  globals.css  index.tsx  layout.tsx  page.tsx  workout-plan.tsx
frontend/components/: NumberSelector.tsx
frontend/services/: api.ts
frontend/store/: useSessionStore.ts  useUserStore.ts
frontend/theme/: index.ts
frontend/types/: api.d.ts  domain.ts
supabase/: .sqlfluff  README.md  config.toml
supabase/migrations/: 20260220102412_initial_schema.sql  20260224154046_add_metadata_to_exercise_sets.sql  (+8 more)
web/: .env.example  package.json
(+24 files in other folders)
