[project]
name = "fllux-backend"
version = "0.8.0"
description = "The biological training engine and API for the FLUX application."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.133.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "supabase>=2.28.0",
    "uvicorn>=0.41.0",
]
